tests/test_if/test7.wacc
# if condition type mismatch

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  if (true) then
    skip 
  else 
    skip
  fi
end
